...
    
    override func viewDidLoad() {
        super.viewDidLoad()
        
        self.clearsSelectionOnViewWillAppear = true
        
        tabBarController?.title = NSLocalizedString("Settings", comment: "")
        
        let appDelegate = UIApplication.shared.delegate as? AppDelegate
        self.callingMgr = appDelegate?.callingManager
    }
    
    
...
    
    override func tableView(_ tableView: UITableView, cellForRowAt indexPath: IndexPath) -> UITableViewCell {
        let cell = tableView.dequeueReusableCell(withIdentifier: "cell", for: indexPath)
        
        switch indexPath.row {
        case 0:
            cell.textLabel?.text = NSLocalizedString("LDS.org credentials", comment: "")
        case 1:
            cell.textLabel?.text = NSLocalizedString("Sharing/Sync Options", comment: "")
        case 2:
            cell.textLabel?.text = NSLocalizedString("Edit Calling Statuses", comment: "")
        case 3:
            cell.textLabel?.text = NSLocalizedString("Network Test", comment: "")
...
