...
    }
    func setupCell () {
        titleLabel.translatesAutoresizingMaskIntoConstraints = false
        titleLabel.adjustsFontSizeToFitWidth = true
        
        newButton.translatesAutoresizingMaskIntoConstraints = false
        newButton.setBackgroundImage(UIImage.init(named:"add"), for: .normal)
        newButton.isHidden = true
        
        
        addSubview(titleLabel)
        addSubview(newButton)
        
...
