...
        case 0:
            let cell = tableView.dequeueReusableCell(withIdentifier: "cell", for: indexPath)
            if newCalling != nil && newCalling?.position.name != nil && newCalling?.position.name != "" {
                cell.textLabel?.text = newCalling?.position.name
            }
            else {
                cell.textLabel?.text = NSLocalizedString("Select Calling", comment: "Select Calling")
            }
            
            cell.accessoryType = UITableViewCellAccessoryType.disclosureIndicator
            
            return cell
            
...
