//
//  CallingPickerUITests.swift
//  Calling WorkflowUITests
//
//  Created by Chad Olsen on 5/29/18.
//  Copyright © 2018 colsen. All rights reserved.
//

import XCTest

class CallingPickerUITests: XCTestCase {
        
    override func setUp() {
        super.setUp()
        
        // Put setup code here. This method is called before the invocation of each test method in the class.
        
        // In UI tests it is usually best to stop immediately when a failure occurs.
        continueAfterFailure = false
        // UI tests must launch the application that they test. Doing this in setup will make sure it happens for each test method.
        XCUIApplication().launch()

        // In UI tests it’s important to set the initial state - such as interface orientation - required for your tests before they run. The setUp method is a good place to do this.
    }
    
    override func tearDown() {
        // Put teardown code here. This method is called after the invocation of each test method in the class.
        super.tearDown()
    }
    
    func testCallingPickerCustom() {
        
        let tablesQuery = XCUIApplication().tables
        tablesQuery/*@START_MENU_TOKEN@*/.staticTexts["Elders Quorum"]/*[[".cells.staticTexts[\"Elders Quorum\"]",".staticTexts[\"Elders Quorum\"]"],[[[-1,1],[-1,0]]],[0]]@END_MENU_TOKEN@*/.tap()
        tablesQuery/*@START_MENU_TOKEN@*/.staticTexts["Instructors"]/*[[".cells.staticTexts[\"Instructors\"]",".staticTexts[\"Instructors\"]"],[[[-1,1],[-1,0]]],[0]]@END_MENU_TOKEN@*/.tap()
        tablesQuery/*@START_MENU_TOKEN@*/.buttons["add"]/*[[".cells.buttons[\"add\"]",".buttons[\"add\"]"],[[[-1,1],[-1,0]]],[0]]@END_MENU_TOKEN@*/.tap()
        tablesQuery/*@START_MENU_TOKEN@*/.staticTexts["Elders Quorum Instructor"]/*[[".cells.staticTexts[\"Elders Quorum Instructor\"]",".staticTexts[\"Elders Quorum Instructor\"]"],[[[-1,1],[-1,0]]],[0]]@END_MENU_TOKEN@*/.tap()
        tablesQuery/*@START_MENU_TOKEN@*/.buttons["Add Custom Calling"]/*[[".cells.buttons[\"Add Custom Calling\"]",".buttons[\"Add Custom Calling\"]"],[[[-1,1],[-1,0]]],[0]]@END_MENU_TOKEN@*/.tap()
        tablesQuery/*@START_MENU_TOKEN@*/.textFields["Calling Title"]/*[[".cells.textFields[\"Calling Title\"]",".textFields[\"Calling Title\"]"],[[[-1,1],[-1,0]]],[0]]@END_MENU_TOKEN@*/.typeText("EQ Webmaster")
        tablesQuery/*@START_MENU_TOKEN@*/.buttons["Done"]/*[[".cells.buttons[\"Done\"]",".buttons[\"Done\"]"],[[[-1,1],[-1,0]]],[0]]@END_MENU_TOKEN@*/.tap()
        
    }
    
    func testCallingPicker() {
        // Use recording to get started writing UI tests.
        // Use XCTAssert and related functions to verify your tests produce the correct results.
        
        let tablesQuery = XCUIApplication().tables
        tablesQuery/*@START_MENU_TOKEN@*/.staticTexts["Elders Quorum"]/*[[".cells.staticTexts[\"Elders Quorum\"]",".staticTexts[\"Elders Quorum\"]"],[[[-1,1],[-1,0]]],[0]]@END_MENU_TOKEN@*/.tap()
        tablesQuery/*@START_MENU_TOKEN@*/.staticTexts["Elders Quorum Presidency"]/*[[".cells.staticTexts[\"Elders Quorum Presidency\"]",".staticTexts[\"Elders Quorum Presidency\"]"],[[[-1,1],[-1,0]]],[0]]@END_MENU_TOKEN@*/.tap()
        tablesQuery/*@START_MENU_TOKEN@*/.buttons["add"]/*[[".cells.buttons[\"add\"]",".buttons[\"add\"]"],[[[-1,1],[-1,0]]],[0]]@END_MENU_TOKEN@*/.tap()
        tablesQuery/*@START_MENU_TOKEN@*/.staticTexts["Select Calling"]/*[[".cells.staticTexts[\"Select Calling\"]",".staticTexts[\"Select Calling\"]"],[[[-1,1],[-1,0]]],[0]]@END_MENU_TOKEN@*/.tap()
        tablesQuery/*@START_MENU_TOKEN@*/.staticTexts["EQ Asst. Secretary"]/*[[".cells.staticTexts[\"EQ Asst. Secretary\"]",".staticTexts[\"EQ Asst. Secretary\"]"],[[[-1,1],[-1,0]]],[0]]@END_MENU_TOKEN@*/.tap()
        
    }
    

    
}
